--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: Main
 
 on:
+  workflow_dispatch:
   release:
     types: [published]
   push:
@@ -74,7 +75,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: [build]
-    if: github.event_name == 'release'
+    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     steps:
       - name: Download a distribution artifact
         uses: actions/download-artifact@v2
