--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,16 +44,33 @@ nav:
   - About: about.md
 
 theme:
+  palette:
+    - scheme: slate
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+    - scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
   name: "material"
   custom_dir: overrides/
   highlightjs: true
-  favicon: img/blacksheep-favicon-white.png
+  favicon: img/favicon.ico
   logo: img/logow.svg
   icon:
     repo: fontawesome/brands/github
 
 extra_css:
+  - css/neoteroi.css
   - css/extra.css
+
+plugins:
+  - search
+  - neoteroi.contribs:
+      contributors:
+        - email: roberto.prevato@gmail.com
+          image: https://avatars.githubusercontent.com/u/2576032?s=400&u=d8d880e8ed05bb170877dd3d561d8301c4beeeed&v=4
 
 markdown_extensions:
   - admonition
@@ -66,3 +83,6 @@ markdown_extensions:
       alternate_style: true
   - toc:
       permalink: true
+  - neoteroi.timeline
+  - neoteroi.cards
+  - neoteroi.projects
