--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,40 @@
-click==7.1.2
+anyio==3.6.2
+certifi==2022.9.24
+click==8.0.4
+commonmark==0.9.1
+essentials==1.1.5
+essentials-openapi==1.0.4
 future==0.18.2
 ghp-import==2.0.2
+h11==0.12.0
+httpcore==0.15.0
+httpx==0.23.0
+idna==3.4
 importlib-metadata==4.10.1
-Jinja2==2.11.2
+Jinja2==3.0.3
 joblib==0.17.0
 livereload==2.6.3
 lunr==0.5.8
 Markdown==3.3
-MarkupSafe==1.1.1
+MarkupSafe==2.1.1
 mergedeep==1.3.4
-mkdocs==1.2.3
+mkdocs==1.4.2
 mkdocs-material==7.3.1
 mkdocs-material-extensions==1.0.1
+neoteroi-mkdocs==0.1.2
 nltk==3.5
 packaging==21.3
 Pygments==2.7.1
 pymdown-extensions==9.1
 pyparsing==3.0.7
 python-dateutil==2.8.2
-PyYAML==5.3.1
+PyYAML==6.0
 pyyaml_env_tag==0.1
 regex==2020.9.27
+rfc3986==1.5.0
+rich==12.2.0
 six==1.15.0
+sniffio==1.3.0
 tornado==6.0.4
 tqdm==4.50.0
 watchdog==2.1.6
