Giscus and other improvements

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,3 +86,6 @@ markdown_extensions:
   - neoteroi.timeline
   - neoteroi.cards
   - neoteroi.projects
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
