--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: BlackSheep
 site_author: Roberto Prevato
-site_description: The official website of BlackSheep, a fast ASGI web framework for Python asyncio.
+site_description: The official documentation website of BlackSheep, a fast ASGI web framework for Python asyncio.
 site_url: https://www.neoteroi.dev/blacksheep/
 repo_name: Neoteroi/BlackSheep
 repo_url: https://github.com/Neoteroi/BlackSheep
@@ -42,6 +42,7 @@ nav:
   - Extensions: extensions.md
   - Contributing: contributing.md
   - About: about.md
+  - Neoteroi docs home: "/"
 
 theme:
   palette:
@@ -61,9 +62,13 @@ theme:
   icon:
     repo: fontawesome/brands/github
 
+extra:
+    version: 1
+    is_current_version: true
+
 extra_css:
   - css/neoteroi.css
-  - css/extra.css
+  - css/extra.css?v=20221120
 
 plugins:
   - search
