--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - main
+      - v1
     paths-ignore:
       - README.md
   pull_request:
@@ -21,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: [3.9]
+        python-version: ["3.10"]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -87,14 +88,10 @@ jobs:
         run: |
           7z x -o"site" dist/site.zip
 
-      - name: Use Python 3.9
+      - name: Use Python 3.10
         uses: actions/setup-python@v1
         with:
-          python-version: 3.9
-
-      - name: Install tools
-        run: |
-          pip install pyazblob
+          python-version: "3.10"
 
       - name: Install tools
         run: |
