--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,7 +31,9 @@ nav:
       - CORS: cors.md
       - Anti-Forgery: anti-request-forgery.md
       - Data protection: dataprotection.md
+      - HSTS: hsts.md
       - Remotes: remotes.md
+  - Cache control: cache-control.md
   - Binders: binders.md
   - Background tasks: background-tasks.md
   - Settings: settings.md
