--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 anyio==3.6.2
+azure-common==1.1.28
+azure-core==1.25.0
+azure-storage-blob==12.13.1
 certifi==2022.9.24
-click==8.0.4
+cffi==1.15.1
+charset-normalizer==2.1.1
+click
 commonmark==0.9.1
+cryptography==38.0.3
 essentials==1.1.5
 essentials-openapi==1.0.4
 future==0.18.2
@@ -11,6 +17,7 @@ httpcore==0.15.0
 httpx==0.23.0
 idna==3.4
 importlib-metadata==4.10.1
+isodate==0.6.1
 Jinja2==3.0.3
 joblib==0.17.0
 livereload==2.6.3
@@ -21,9 +28,12 @@ mergedeep==1.3.4
 mkdocs==1.4.2
 mkdocs-material==7.3.1
 mkdocs-material-extensions==1.0.1
+msrest==0.7.1
 neoteroi-mkdocs==0.1.2
 nltk==3.5
+oauthlib==3.2.2
 packaging==21.3
+pycparser==2.21
 Pygments==2.7.1
 pymdown-extensions==9.1
 pyparsing==3.0.7
@@ -31,11 +41,15 @@ python-dateutil==2.8.2
 PyYAML==6.0
 pyyaml_env_tag==0.1
 regex==2020.9.27
+requests==2.28.1
+requests-oauthlib==1.3.1
 rfc3986==1.5.0
 rich==12.2.0
 six==1.15.0
 sniffio==1.3.0
 tornado==6.0.4
 tqdm==4.50.0
+typing_extensions==4.4.0
+urllib3==1.26.12
 watchdog==2.1.6
 zipp==3.7.0
