--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,9 @@ edit_uri: ""
 nav:
   - Overview: index.md
   - "Getting started: basics": getting-started.md
+  - "Getting started: API": api-project-template.md
   - "Getting started: MVC": mvc-project-template.md
+  - More about the CLI: cli.md
   - Dependency injection: dependency-injection.md
   - OpenAPI Docs: openapi.md
   - Application: application.md
@@ -69,7 +71,7 @@ theme:
     repo: fontawesome/brands/github
 
 extra:
-    version: 1
+    version: 2
     is_current_version: true
 
 extra_css:
@@ -87,7 +89,11 @@ markdown_extensions:
   - admonition
   - markdown.extensions.codehilite:
       guess_lang: false
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tabbed:
